[gd_scene format=3 uid="uid://cnpxi3gw7bxyb"]

[ext_resource type="Script" uid="uid://p81o5l0fbcry" path="res://03_enemies/turrets/turret.gd" id="1_ul4ha"]
[ext_resource type="Texture2D" uid="uid://dxbeg0ulcby" path="res://04_assets/external/Turret_G79/AnimFire/TG79Open0000.png" id="2_x7ugr"]
[ext_resource type="Texture2D" uid="uid://bpfc2s3y5bbpc" path="res://04_assets/external/Turret_G79/AnimFire/TG79Open0001.png" id="3_ndect"]
[ext_resource type="Texture2D" uid="uid://cn2vqn1xgmb1w" path="res://04_assets/external/Turret_G79/AnimFire/TG79Open0002.png" id="4_cldy0"]
[ext_resource type="Texture2D" uid="uid://rgupwlrit1ms" path="res://04_assets/external/Turret_G79/AnimFire/TG79Open0003.png" id="5_dgc3c"]
[ext_resource type="Texture2D" uid="uid://d30m1c6peiidu" path="res://04_assets/external/Turret_G79/AnimFire/TG79Open0004.png" id="6_et1pp"]
[ext_resource type="Texture2D" uid="uid://km66m80wu8wx" path="res://04_assets/external/Turret_G79/AnimFire/TG79Open0005.png" id="7_f3xl0"]
[ext_resource type="Texture2D" uid="uid://cti8ukbw0nbue" path="res://04_assets/external/Turret_G79/AnimFire/TG79Open0006.png" id="8_8tfgi"]
[ext_resource type="Texture2D" uid="uid://bgwujiwcc8gl6" path="res://04_assets/external/Turret_G79/AnimFire/TG79Open0007.png" id="9_wupem"]
[ext_resource type="Texture2D" uid="uid://c3l57deumej2y" path="res://04_assets/external/Turret_G79/AnimFire/TG79Open0008.png" id="10_4y7wf"]
[ext_resource type="Texture2D" uid="uid://cs58vol8lyp6y" path="res://04_assets/external/Turret_G79/AnimFire/TG79Open0009.png" id="11_5mr5d"]
[ext_resource type="Texture2D" uid="uid://gjggps8yahn6" path="res://04_assets/external/Turret_G79/AnimFire/TG79Open0010.png" id="12_3vxf0"]
[ext_resource type="Texture2D" uid="uid://d23ebpq6gpl4u" path="res://04_assets/external/Turret_G79/AnimFire/TG79Open0011.png" id="13_e6m3u"]
[ext_resource type="Texture2D" uid="uid://bowxrklks07p5" path="res://04_assets/external/Turret_G79/AnimIdle/MK531Default.png" id="14_pokwu"]
[ext_resource type="Texture2D" uid="uid://b5fbk0t8v1lyh" path="res://04_assets/external/Turret_G79/AnimOpen/TG79Open0009.png" id="15_d6r4a"]
[ext_resource type="Texture2D" uid="uid://dgomqtuiv5dr" path="res://04_assets/external/Turret_G79/AnimOpen/TG79Open0008.png" id="16_j61fn"]
[ext_resource type="Texture2D" uid="uid://85l5pkijvlfp" path="res://04_assets/external/Turret_G79/AnimOpen/TG79Open0007.png" id="17_u3o0x"]
[ext_resource type="Texture2D" uid="uid://t6fdsji26nxr" path="res://04_assets/external/Turret_G79/AnimOpen/TG79Open0006.png" id="18_f4rtx"]
[ext_resource type="Texture2D" uid="uid://cuqonvrhh1ijy" path="res://04_assets/external/Turret_G79/AnimOpen/TG79Open0005.png" id="19_ij1di"]
[ext_resource type="Texture2D" uid="uid://dhm57dyskwk30" path="res://04_assets/external/Turret_G79/AnimOpen/TG79Open0004.png" id="20_t62bw"]
[ext_resource type="Texture2D" uid="uid://bewiao4bu8m4a" path="res://04_assets/external/Turret_G79/AnimOpen/TG79Open0003.png" id="21_i43xk"]
[ext_resource type="Texture2D" uid="uid://bw2oj0frilsse" path="res://04_assets/external/Turret_G79/AnimOpen/TG79Open0002.png" id="22_p0oql"]
[ext_resource type="Texture2D" uid="uid://bgfjvde1qurx6" path="res://04_assets/external/Turret_G79/AnimOpen/TG79Open0001.png" id="23_7ojmd"]
[ext_resource type="Texture2D" uid="uid://ba1i6vkv63uc8" path="res://04_assets/external/Turret_G79/AnimOpen/TG79Open0000.png" id="24_dg0bv"]
[ext_resource type="Texture2D" uid="uid://7nw1yaywyvih" path="res://04_assets/external/spaceship-2d-game-sprites/Ship_effects/Fire_Shot_1_1.png" id="25_d643i"]
[ext_resource type="Texture2D" uid="uid://exaxo2t05nu" path="res://04_assets/external/spaceship-2d-game-sprites/Ship_effects/Fire_Shot_1_2.png" id="26_duaup"]

[sub_resource type="SpriteFrames" id="SpriteFrames_i30lc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x7ugr")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x7ugr")
}, {
"duration": 1.0,
"texture": ExtResource("3_ndect")
}, {
"duration": 1.0,
"texture": ExtResource("4_cldy0")
}, {
"duration": 1.0,
"texture": ExtResource("5_dgc3c")
}, {
"duration": 1.0,
"texture": ExtResource("6_et1pp")
}, {
"duration": 1.0,
"texture": ExtResource("7_f3xl0")
}, {
"duration": 1.0,
"texture": ExtResource("8_8tfgi")
}, {
"duration": 1.0,
"texture": ExtResource("9_wupem")
}, {
"duration": 1.0,
"texture": ExtResource("10_4y7wf")
}, {
"duration": 1.0,
"texture": ExtResource("11_5mr5d")
}, {
"duration": 1.0,
"texture": ExtResource("12_3vxf0")
}, {
"duration": 1.0,
"texture": ExtResource("13_e6m3u")
}],
"loop": false,
"name": &"fire",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_pokwu")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_d6r4a")
}, {
"duration": 1.0,
"texture": ExtResource("16_j61fn")
}, {
"duration": 1.0,
"texture": ExtResource("17_u3o0x")
}, {
"duration": 1.0,
"texture": ExtResource("18_f4rtx")
}, {
"duration": 1.0,
"texture": ExtResource("19_ij1di")
}, {
"duration": 1.0,
"texture": ExtResource("20_t62bw")
}, {
"duration": 1.0,
"texture": ExtResource("21_i43xk")
}, {
"duration": 1.0,
"texture": ExtResource("22_p0oql")
}, {
"duration": 1.0,
"texture": ExtResource("23_7ojmd")
}, {
"duration": 1.0,
"texture": ExtResource("24_dg0bv")
}],
"loop": false,
"name": &"open",
"speed": 60.0
}]

[sub_resource type="Animation" id="Animation_x7ugr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MussleFlash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MussleFlash:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MussleFlash:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MussleFlash:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 42)]
}

[sub_resource type="Animation" id="Animation_dgc3c"]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MussleFlash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cldy0"]
resource_name = "fire"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fire"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_gun_fired"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MussleFlash:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.05),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MussleFlash:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.05, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(3.3539472, 3.3539472, 3.3539472, 1), Color(0.3770668, 0.3770668, 0.3770668, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MussleFlash:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MussleFlash:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 16)]
}

[sub_resource type="Animation" id="Animation_ul4ha"]
resource_name = "idle"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MussleFlash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ndect"]
resource_name = "open"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"open"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MussleFlash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dgc3c"]
_data = {
&"RESET": SubResource("Animation_x7ugr"),
&"default": SubResource("Animation_dgc3c"),
&"fire": SubResource("Animation_cldy0"),
&"idle": SubResource("Animation_ul4ha"),
&"open": SubResource("Animation_ndect")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ul4ha"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ul4ha"]
size = Vector2(354, 434)

[node name="Turret" type="Node2D" unique_id=136900581]
script = ExtResource("1_ul4ha")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=970507002]
texture_filter = 1
position = Vector2(-1.7053026e-13, 3.000001)
rotation = 1.5707964
scale = Vector2(0.35, 0.35)
sprite_frames = SubResource("SpriteFrames_i30lc")

[node name="BulletSpawnMarker" type="Marker2D" parent="." unique_id=284192615]
position = Vector2(0, 15)
rotation = 1.5707964

[node name="MussleFlash" type="Node2D" parent="." unique_id=2088104365]
visible = false
texture_filter = 1
position = Vector2(0, 42)

[node name="FireShot12" type="Sprite2D" parent="MussleFlash" unique_id=908933403]
self_modulate = Color(1, 1, 1, 0.8117647)
texture_filter = 1
position = Vector2(7.6293945e-06, 8.625053)
rotation = -3.1415927
scale = Vector2(0.11551842, 0.115518436)
texture = ExtResource("26_duaup")

[node name="FireShot11" type="Sprite2D" parent="MussleFlash" unique_id=1705572066]
self_modulate = Color(1, 1, 1, 0.8509804)
position = Vector2(-3.8146977e-06, 1.6250534)
rotation = -3.1415925
scale = Vector2(0.074597694, 0.074597634)
texture = ExtResource("25_d643i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=2034246663]
libraries/ = SubResource("AnimationLibrary_dgc3c")

[node name="TurretBody" type="Area2D" parent="." unique_id=1637874460 groups=["enemies"]]
rotation = 1.5707964
collision_layer = 2
collision_mask = 17
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurretBody" unique_id=1170621600]
shape = SubResource("CircleShape2D_ul4ha")
debug_color = Color(0.9882353, 0, 0.23137255, 0)

[node name="VisibilityCone" type="Area2D" parent="." unique_id=471923097]
unique_name_in_owner = true
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisibilityCone" unique_id=455478176]
position = Vector2(0, 197)
shape = SubResource("RectangleShape2D_ul4ha")
debug_color = Color(0.91764706, 0, 0.7019608, 0)
